AI Aim Actor Update

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -75,3 +75,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/MagicLeap.MagicLeapSettings]
 bEnableZI=True
 
+[/Script/GameplayDebugger.GameplayDebuggerConfig]
+CategorySlot4=NumPadFour
+
