--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -78,3 +78,7 @@ bEnableZI=True
 [/Script/GameplayDebugger.GameplayDebuggerConfig]
 CategorySlot4=NumPadFour
 
+[/Script/LuminRuntimeSettings.LuminRuntimeSettings]
+IconModelPath=(Path="")
+IconPortalPath=(Path="")
+
