--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/TestLevel.TestLevel
-EditorStartupMap=/Game/Levels/TestLevel.TestLevel
+GameDefaultMap=/Game/Menu/MenuLevel.MenuLevel
+EditorStartupMap=/Game/Menu/MenuLevel.MenuLevel
 GlobalDefaultGameMode=/Script/ShootThemUp.STUGameModeBase
+GameInstanceClass=/Game/BP_STUGameInstance.BP_STUGameInstance_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
