--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -17,7 +17,7 @@ GameInstanceClass=/Game/BP_STUGameInstance.BP_STUGameInstance_C
 r.DefaultFeature.AutoExposure=False
 
 [/Script/Engine.AudioSettings]
-DefaultSoundClassName=/Engine/EngineSounds/Master.Master
+DefaultSoundClassName=/Game/Sounds/Settings/SC_Master.SC_Master
 DefaultMediaSoundClassName=/Engine/EngineSounds/Master.Master
 DefaultBaseSoundMix=/Game/Sounds/Settings/SMix_Default.SMix_Default
 
